Adding Login and SignUp UI. Plus, hotfix on the Rest API.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 .home,
 .services,
 .products,
-.sign-up {
+.entry {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -34,11 +34,10 @@
   font-size: 100px;
 }
 
-.sign-up {
+.entry {
   background-image: url('/public/images/img-8.jpg');
-  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
 }
+
+
