--- a/client/src/components/Cards.css
+++ b/client/src/components/Cards.css
@@ -1,28 +1,24 @@
-.cards {
-  padding: 4rem;
-  background: #fff;
-}
 
 h1 {
   text-align: center;
 }
 
 .cards__container {
-  display: flex;
+  display: inline-flex;
   flex-flow: column;
   align-items: center;
-  max-width: 1120px;
-  width: 90%;
+  max-width: 550px;
+  width: 60%;
   margin: 0 auto;
 }
 
 .cards__wrapper {
   position: relative;
-  margin: 50px 0 45px;
+  margin: 30px 0 0;
 }
 
 .cards__items {
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 }
 
 .cards__item {
@@ -35,7 +31,7 @@ h1 {
 .cards__item__link {
   display: flex;
   flex-flow: column;
-  width: 100%;
+  width: 70%;
   box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
@@ -47,7 +43,7 @@ h1 {
 .cards__item__pic-wrap {
   position: relative;
   width: 100%;
-  padding-top: 67%;
+  padding-top: 40%;
   overflow: hidden;
 }
 
